added header mobile

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
+    <link rel="icon"
+      type="image/x-icon"
+      href="images/icons/logo.svg"
+    >
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="anonymous"
+    >
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    >
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="header">
+      <div class="header__bg"></div>
+      <div class="header__top">
+        <a href="#menu" class="header__menu-opener icon-menu"></a>
+        <a href="#" class="header__logo logo">
+          <img src="images/icons/logo.svg" alt="NA MU">
+        </a>
+      </div>
+      <div class="header__content">
+        <h1 class="header__title">
+          ХУДОЖНІЙ
+          <br>
+          МУЗЕЙ
+        </h1>
+        <a class="header__button">
+          <div class="header__btn">КВИТКИ</div>
+          <div class="btn"></div>
+        </a>
+        <a href="#events" class="header__events">ПОДІЇ</a>
+      </div>
+    </header>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
