add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -367,14 +367,22 @@
                 >
               </a>
               <div class="footer__logo-socials-container">
-                <a href="#" class="footer__facebook">
+                <a
+                  href="https://www.facebook.com/namu.museum/?locale=uk_UA"
+                  class="footer__facebook"
+                  target="_blank"
+                >
                   <img
                     src="./images/facebook.svg"
                     alt="facebook"
                     class="footer__facebook-icon"
                   >
                 </a>
-                <a href="#" class="footer__instagram">
+                <a
+                  href="https://www.instagram.com/namu.museum/"
+                  class="footer__instagram"
+                  target="_blank"
+                >
                   <img
                     src="./images/instagram.svg"
                     alt="instagram"
