add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -429,7 +429,6 @@
             <a
               href="tel:+380442781357"
               class="footer__link"
-              target="_blank"
             >
               тел. +38 (044) 278‑13‑57
             </a>
@@ -437,7 +436,6 @@
             <a
               href="tel:+380442787454"
               class="footer__link"
-              target="_blank"
             >
               факс +38 (044) 278‑74‑54
             </a>
@@ -456,11 +454,11 @@
           <div class="grid__item grid__item--mobile-1-1 grid__item--tablet-2-3 grid__item--desktop-8-9">
             <a href="#gallery" class="footer__link footer__link--mb">Галерея</a>
 
-            <a href="#subscription" class="footer__link">Про Нас</a>
+            <a href="#about-us" class="footer__link">Про Нас</a>
           </div>
 
           <div class="grid__item grid__item--mobile-2-2 grid__item--tablet-4-5 grid__item--desktop-10-11">
-            <a href="#events" class="footer__link footer__link--mb">Виставки та події</a>
+            <a href="#exhibition-and-events" class="footer__link footer__link--mb">Виставки та події</a>
 
             <a href="#contacts" class="footer__link">Контакти</a>
           </div>
