add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -164,7 +164,7 @@
                 <p class="
                   exhibit__description
                 ">
-                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське
+                Національний Художній Музей України, презентує унікальну частину колекції Градобанку - українське
                 мистецтво другої половини 1980-1995 років.
                 </p>
 
