--- a/src/index.html
+++ b/src/index.html
@@ -22,24 +22,33 @@
   </head>
   <body class="page__body">
     <header class="header">
-      <div class="header__bg"></div>
-      <div class="header__top">
-        <a href="#menu" class="header__menu-opener icon-menu"></a>
-        <a href="#" class="header__logo logo">
-          <img src="images/icons/logo.svg" alt="NA MU">
-        </a>
-      </div>
-      <div class="header__content">
-        <h1 class="header__title">
-          ХУДОЖНІЙ
-          <br>
-          МУЗЕЙ
-        </h1>
-        <a class="header__button">
-          <div class="header__btn">КВИТКИ</div>
-          <div class="btn"></div>
-        </a>
-        <a href="#events" class="header__events">ПОДІЇ</a>
+      <div class="container">
+        <div class="header__bg"></div>
+
+        <div class="header__top">
+          <a href="#menu" class="header__menu-opener icon-menu"></a>
+          <a href="#" class="header__logo logo">
+            <img
+              class="logo__image"
+              src="images/icons/logo.svg"
+              alt="NA MU"
+            >
+          </a>
+
+        </div>
+
+        <div class="header__content">
+          <h1 class="header__title">
+            ХУДОЖНІЙ
+            <br>
+            МУЗЕЙ
+          </h1>
+          <a class="header__button">
+            <div class="header__btn">КВИТКИ</div>
+            <div class="btn"></div>
+          </a>
+          <a href="#events" class="header__events">ПОДІЇ</a>
+        </div>
       </div>
     </header>
 
