--- a/src/index.html
+++ b/src/index.html
@@ -218,11 +218,30 @@
 
         <div class="contacts__address">
           <p>Контакти:</p>
-          <p>вул. М. Грушевського, 6; Київ, 01001<br>
-            <a href="tel:+38 (044) 278-13-57" class="contacts__address-links">тел. +38 (044) 278-13-57</a> <br>
-            <a href="tel:+38 (044) 278-74-54" class="contacts__address-links">факс +38 (044) 278-74-54</a> <br>
-            <a href="mailto:info@namu.kiev.ua" class="contacts__address-links">e-mail: info@namu.kiev.ua</a>
-          </p>
+          <a 
+            href="https://goo.gl/maps/tseqBxefHoKJ7sPT9?coh=178571&entry=tt" 
+            class="contacts__address-links" 
+            target="_blank"
+          >вул. М. Грушевського, 6; Київ, 01001
+          </a><br>
+          <a
+            href="tel:+38 (044) 278-13-57" 
+            class="contacts__address-links"
+            target="_blank"
+          >тел. +38 (044) 278-13-57
+          </a> <br>
+          <a 
+            href="tel:+38 (044) 278-74-54" 
+            class="contacts__address-links" 
+            target="_blank"
+          >факс +38 (044) 278-74-54
+          </a> <br>
+          <a 
+            href="mailto:info@namu.kiev.ua" 
+            class="contacts__address-links" 
+            target="_blank"
+          >e-mail: info@namu.kiev.ua
+          </a>
         </div>
 
         <a href="#" class="arrow-menu"></a>
