add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -329,7 +329,7 @@
           </div>
 
           <form
-            action="#"
+            action="/"
             method="post"
             class="subscription__form"
           >
@@ -473,6 +473,6 @@
         </div>
       </div>
     </footer>
-
+    <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
