--- a/src/index.html
+++ b/src/index.html
@@ -174,7 +174,7 @@
                 name="email" 
                 type="email" 
                 class="subscription__input" 
-                placeholder="EMAIL" 
+                placeholder="E-mail"
                 required
               >
 
