--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="page">
+<html lang="ua" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,12 +21,12 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="page__body">
-    <header class="header">
+    <header  class="header">
       <div class="container">
         <div class="header__bg"></div>
 
         <div class="header__top">
-          <a href="#menu" class="header__menu-opener icon-menu"></a>
+          <a href="#menu" class="header__menu-opener icon icon--menu"></a>
           <a href="#" class="header__logo logo">
             <img
               class="logo__image"
@@ -51,6 +51,70 @@
         </div>
       </div>
     </header>
+
+    <nav class="page__menu menu" id="menu">
+      <div class="container">
+        <div class="menu__content">
+          <div class="menu__nav nav">
+
+            <div class="menu__close">
+              <a href="#" class="icon icon--menu-close"></a>
+            </div>
+
+            <ul class="nav__item">
+              <li class="nav__list">
+                <a href="#gallery" class="nav__link">Галерея</a>
+              </li>
+
+              <li class="nav__list">
+                <a href="#events" class="nav__link">Виставки та події</a>
+              </li>
+            </ul>
+
+            <ul class="nav__item">
+              <li class="nav__list">
+                <a href="#subscription" class="nav__link">Про Нас</a>
+              </li>
+
+              <li class="nav__list">
+                <a href="#contacts" class="nav__link">Контакти</a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="menu__line"></div>
+
+          <div class="menu__schedule schedule">
+            <div class="schedule__work-days">
+              <div class="schedule__title">Графік роботи</div>
+
+              <div class="schedule__day">
+                <strong>12:00 — 20:00</strong> середа
+              </div>
+              <div class="schedule__day">
+                <strong>12:00 — 20:00</strong> четвер
+              </div>
+              <div class="schedule__day">
+                <strong>12:00 — 20:00</strong> п'ятниця
+              </div>
+              <div class="schedule__day">
+                <strong>11:00 — 19:00</strong> субота
+              </div>
+              <div class="schedule__day">
+                <strong>11:00 — 19:00</strong> неділя
+              </div>
+            </div>
+            <div class="schedule__days-off">
+              <strong>Вихідні:</strong> понеділок, вівторок
+              <br>
+              Каса припиняє роботу за 1 годину до закриття музею
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav>
+
+    <main class="main"></main>
 
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
