add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -41,11 +41,11 @@
               grid__item--desktop-3-5
             ">
               <div>
-                <a href="#gallery" class="header__tickets-text">Квитки</a>
+                <a href="#exhibition-and-events" class="header__tickets-text">Квитки</a>
               </div>
 
               <div class="header__button--container">
-                <a class="header__button" href="#">
+                <a class="header__button" href="#exhibition-and-events">
                   <img
                     src="./images/tickets-button.svg"
                     alt="tickets-button"
