changed to grid

--- a/src/index.html
+++ b/src/index.html
@@ -21,33 +21,39 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="page__body">
-    <header  class="header">
+
+    <header class="page__header header" id="home">
       <div class="container">
-        <div class="header__bg"></div>
-
-        <div class="header__top">
-          <a href="#menu" class="header__menu-opener icon icon--menu"></a>
-          <a href="#" class="header__logo logo">
-            <img
-              class="logo__image"
-              src="images/icons/logo.svg"
-              alt="NA MU"
-            >
-          </a>
-
-        </div>
-
         <div class="header__content">
-          <h1 class="header__title">
-            ХУДОЖНІЙ
-            <br>
-            МУЗЕЙ
-          </h1>
-          <a class="header__button">
-            <div class="header__btn">КВИТКИ</div>
-            <div class="btn"></div>
+          <nav class="header-top grid">
+            <div class="header-top__icon">
+              <a href="#menu" class="header-top__icon-menu"></a>
+            </div>
+            <h2 class="
+              header-top__logo
+              grid__item--tablet-4-5
+              grid__item--desktop-7-8"
+            >
+              <a href="#" class="header-top__logo-abbreviation">
+                Na
+                <br>
+                Mu
+              </a>
+              <br>
+            </h2>
+          </nav>
+
+          <div class="header__info grid">
+            <h1 class="header__title grid__item--1-2 grid__item--tablet-1-5">ХУДОЖНІЙ МУЗЕЙ</h1>
+            <div class="header__button grid__item--1-2 grid__item--tablet-1-3 grid__item--desktop-3-5">
+              <div class="header__tickets">КВИТКИ</div>
+              <a href="#events" class="header__btn btn"></a>
+            </div>
+          </div>
+
+          <a href="#events" class="header__events">
+            Події
           </a>
-          <a href="#events" class="header__events">ПОДІЇ</a>
         </div>
       </div>
     </header>
@@ -58,7 +64,7 @@
           <div class="menu__nav nav">
 
             <div class="menu__close">
-              <a href="#" class="icon icon--menu-close"></a>
+              <a href="#" class="menu__close-icon"></a>
             </div>
 
             <ul class="nav__item">
