--- a/src/index.html
+++ b/src/index.html
@@ -351,7 +351,27 @@
                   href="https://goo.gl/maps/wkEatG47NuhNWbnn7"
                   class="footer__second__adress__item__link"
                 >
-                вул. М. Грушевського, 6; Київ, 01001 тел. +38 (044) 278-13-57 факс +38 (044) 278-74-54 e-mail: info@namu.kiev.ua
+                  <div>
+                  вул. М. Грушевського, 6; Київ, 01001
+                  </div>
+                </a>
+                <a
+                  href="tel:+38 (044) 278-13-57"
+                  class="footer__second__adress__item__link"
+                >
+                  <div>тел. +38 (044) 278-13-57</div>
+                </a>
+                <a
+                  href="tel:+38 (044) 278-74-54"
+                  class="footer__second__adress__item__link"
+                >
+                  <div>факс +38 (044) 278-74-54</div>
+                </a>
+                <a
+                  href="mailto:info@namu.kiev.ua"
+                  class="footer__second__adress__item__link"
+                >
+                  <div>e-mail: info@namu.kiev.ua</div>
                 </a>
               </div>
             </div>
