--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,6 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="page__body">
-
     <header class="page__header header" id="home">
       <div class="container">
         <div class="header__content">
@@ -120,7 +119,68 @@
       </div>
     </nav>
 
-    <main class="main"></main>
+    <main class="main">
+      <section class="page__events events" id="events">
+        <div class="container">
+          <div class="events__content">
+            <h2 class="events__title">Актуальні події</h2>
+
+            <div class="events__item">
+              <img
+                src="images/events/1.jpg"
+                alt="image event-1"
+                class="events__image"
+              >
+              <div class="events__info">
+                <p class="events__type">ВИСТАВКА</p>
+                <span class="events__date">26.08-29.11.2019</span>
+              </div>
+              <div class="events__subtitle">
+                <div class="events__name">Йду і повертаюсь</div>
+                <div class="events__square"></div>
+              </div>
+              <div class="events__description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</div>
+            </div>
+
+            <div class="events__item">
+              <img
+                src="images/events/2.jpg"
+                alt="image event-2"
+                class="events__image"
+              >
+              <div class="events__info">
+                <p class="events__type">ВИСТАВКА</p>
+                <span class="events__date">26.08-29.11.2019</span>
+              </div>
+              <div class="events__subtitle">
+                <div class="events__name">І спогади і мрії</div>
+                <div class="events__square"></div>
+              </div>
+              <div class="events__description">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</div>
+            </div>
+
+          </div>
+        </div>
+      </section>
+
+      <section class="page__lecture lecture" id="lecture" >
+        <img
+          src="images/lecture.jpg"
+          alt="lecture"
+          class="lecture__image"
+        >
+        <div class="lecture__content">
+          <div class="lecture__info">
+            <div class="lecture__type">ЛЕКЦІЯ</div>
+            <div class="lecture__date">26/08/2019 - 11:00</div>
+          </div>
+          <h3 class="lecture__title">Від класицизму до романтизму</h3>
+        </div>
+      </section>
+
+      <section class="page__gallery gallery"></section>
+
+    </main>
 
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
