added gallery section and slider

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,11 @@
       rel="stylesheet"
     >
     <link rel="stylesheet" href="./styles/main.scss">
+    <link
+      rel="stylesheet"
+      href="styles/slider/flickity.css"
+      media="screen"
+    >
   </head>
   <body class="page__body">
     <header class="page__header header" id="home">
@@ -178,10 +183,74 @@
         </div>
       </section>
 
-      <section class="page__gallery gallery"></section>
+      <section class="page__gallery gallery">
+        <div class="container">
+          <h2 class="gallery__title">
+            Галерея
+          </h2>
+
+          <div class="gallery__content grid">
+            <div class="gallery__photo gallery__photo--1 grid__item--desktop-1-4">
+              <img
+              src="images/gallery/1.jpg"
+              alt="photo-1"
+              class="gallery__image"
+              >
+            </div>
+
+            <div class="gallery__photo grid__item--desktop-5-12">
+              <img
+                src="images/gallery/2.jpg"
+                alt="photo-2"
+                class="gallery__image"
+              >
+            </div>
+
+            <div class="gallery__photo grid__item--desktop-1-8">
+              <img
+              src="images/gallery/3.jpg"
+              alt="photo-3"
+              class="gallery__image"
+            >
+            </div>
+
+            <div class="gallery__photo grid__item--desktop-9-12">
+              <img
+              src="images/gallery/4.jpg"
+              alt="photo-4"
+              class="gallery__image"
+            >
+            </div>
+
+          </div>
+
+          <div class="gallery__slider slider" id="slider">
+            <div class="carousel js-flickity">
+              <!-- images from unsplash.com -->
+              <div class="carousel-cell">
+                <img src="images/gallery/1.jpg" alt="photo-1">
+              </div>
+              <div class="carousel-cell">
+                <img src="images/gallery/geese.jpg" alt="geese">
+              </div>
+              <div class="carousel-cell">
+                <img src="images/gallery/2.jpg" alt="photo-2">
+              </div>
+              <div class="carousel-cell">
+                <img src="images/gallery/3.jpg" alt="photo-3">
+              </div>
+              <div class="carousel-cell">
+                <img src="images/gallery/4.jpg" alt="photo-4">
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </section>
 
     </main>
 
     <script type="text/javascript" src="scripts/main.js"></script>
+    <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
   </body>
 </html>
