--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,395 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ua" class="page">
+
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
+    <link
+      rel="shortcut icon"
+      href="images/logo.svg"
+      type="image/x-icon"
+    >
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+
+  <body class="page__body">
+    <header class="header" id="page-top">
+      <div class="container">
+        <div class="header__nav">
+          <a href="#menu" class="header__menu-opener">
+            <img
+              src="images/baseline-menu.svg"
+              alt="burger menu logo"
+              class="header__nav--btn"
+            >
+          </a>
+
+          <a href="#" class="logo">
+            <img
+              src="images/logo.svg"
+              alt="NAMU"
+              class="logo__img"
+            >
+          </a>
+        </div>
+        <h1 class="header__title">
+          Художній
+          <br>
+          музей
+        </h1>
+        <div class="
+            grid
+            grid--tablet
+            grid--desktop
+          ">
+          <div class="
+              grid__item
+              grid__item--tablet-1-2
+              grid__item--desktop-3-5
+            ">
+            <a href="#" class="header__link link">
+              <div class="link__title">Квитки</div>
+              <div class="link__button link__button--white">
+                <img src="images/arrow.svg" alt="arrow">
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <div class="page--menu__navigation menu__navigation" id="menu">
+      <main class="container">
+        <div class="menu__navigation-flexability">
+          <a href="#" class="menu__navigation--cross-btn">
+            <img
+              src="images/close.svg"
+              alt="cross button" class="menu__navigation--cross-btn--image"
+            >
+          </a>
+          <nav class="nav menu__navigation--nav">
+            <a href="#" class="nav--item menu__navigation--nav--item">
+              Галерея
+            </a>
+            <a href="#" class="nav--item menu__navigation--nav--item">
+              Про Нас
+            </a>
+            <a href="#events" class="nav--item menu__navigation--nav--item">
+              Виставки та події
+            </a>
+            <a href="#" class="nav--item menu__navigation--nav--item">
+              Контакти
+            </a>
+          </nav>
+
+          <div class="schedule-and-contacts menu__navigation--schedule-and-contacts">
+            <div class="schedule menu__navigation--schedule">
+              <h3 class="schedule-and-contacts--title menu__navigation--schedule-and-contacts--title">
+                Графік роботи:
+              </h3>
+              <ul class="schedule__list">
+                <li class="schedule__list--item">
+                  <span class="schedule__list--item-time">12:00 — 20:00</span> середа
+                </li>
+                <li class="schedule__list--item">
+                  <span class="schedule__list--item-time">12:00 — 20:00</span> четвер
+                </li>
+                <li class="schedule__list--item">
+                  <span class="schedule__list--item-time">12:00 — 20:00</span> п’ятниця
+                </li>
+                <li class="schedule__list--item">
+                  <span class="schedule__list--item-time">11:00 — 19:00</span> субота
+                </li>
+                <li class="schedule__list--item">
+                  <span class="schedule__list--item-time">11:00 — 19:00</span> неділя
+                </li>
+              </ul>
+              <div class="schedule__add-information">
+                <p class="schedule__add-information--text">
+                  Вихідні понеділок, вівторок <br>
+                  Каса припиняє роботу за 1 годину
+                  до закриття музею
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </main>
+    </div>
+
+    <section class="section events" id="events">
+      <main class="container">
+        <h2 class="section__title">
+          Актуальні події
+        </h2>
+
+        <div class="grid grid--tablet grid--desktop">
+          <div class="
+            events--image
+            events--image-1
+            grid__item
+            grid__item--tablet-1-6
+            grid__item--desktop-1-7
+            "></div>
+          <div class="
+            events__content
+            grid__item
+            grid__item--tablet-1-4
+            grid__item--desktop-9-12
+          ">
+            <div class="events__type-and-date">
+              <span class="events__type-and-date--type">
+                Виставка
+              </span>
+              <span class="events__type-and-date--date">
+                26.08-29.11.2019
+              </span>
+            </div>
+            <div class="events__description">
+              <p class="events__description--title">
+                Йду і повертаюсь
+              </p>
+              <div class="events__description--text">
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське
+                  мистецтво другої половини 1980-1995 років.
+              </div>
+            </div>
+          </div>
+        </div>
+          </div>
+          </div>
+          </div>
+
+        <div class="grid grid--tablet grid--desktop">
+          <div class="
+              events--image
+              events--image-2
+              grid__item
+              grid__item--tablet-1-6
+              grid__item--desktop-1-7
+              "></div>
+          <div class="
+            events__content
+            grid__item
+            grid__item--tablet-1-4
+            grid__item--desktop-9-12
+          ">
+            <div class="events__type-and-date">
+              <span class="events__type-and-date--type">
+                Виставка
+              </span>
+              <span class="events__type-and-date--date">
+                26.08-29.11.2019
+              </span>
+            </div>
+            <div class="events__description">
+              <p class="events__description--title">
+                  І спогади і мрії
+              </p>
+              <div class="events__description--text">
+                  Національний художній музей України до 100 річчя від дня народження видатної української художниці Тетяни
+                  Яблонської відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </div>
+            </div>
+          </div>
+        </div>
+          </div>
+          </div>
+          </div>
+      </main>
+
+      <div class="events__list--item">
+        <div class="lection__description">
+          <div class="lection__content">
+            <div class="lection__type-and-date">
+              <span class="lection__type-and-date--type">
+                лекція
+              </span>
+              <span class="lection__type-and-date--date">
+                  26/08/2019 - 11:00
+              </span>
+            </div>
+            <div class="events__description">
+              <p class="events__description--title lection__description--title">
+                Від класицизму до
+                <br>
+                романтизму
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+        </main>
+    </section>
+      </main>
+
+    <section class="gallery" id="gallery">
+      <div class="container">
+        <h2 class="section__title">
+          Галерея
+        </h2>
+
+        <div class="gallery__content">
+          <div class="gallery__item gallery__item-1"></div>
+          <div class="gallery__item gallery__item-2"></div>
+          <div class="gallery__item gallery__item-3"></div>
+          <div class="gallery__item gallery__item-4"></div>
+        </div>
+        <div class="gallery__bullets">
+          <div class="gallery__bullets--bullet"></div>
+          <div class="gallery__bullets--bullet"></div>
+          <div class="gallery__bullets--bullet"></div>
+          <div class="gallery__bullets--bullet"></div>
+        </div>
+      </div>
+    </section>
+
+    <main class="main">
+      <section class="section subscription">
+        <h2 class="section__title subscription__title">
+          Підписка
+        </h2>
+        <p class="subscription__text">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </p>
+        <div class="subscription__positional">
+          <form
+            action="#"
+            method="get"
+            class="subscription__form"
+          >
+            <input
+              type="email"
+              placeholder="E-mail"
+              class="subscription__button"
+              required
+            >
+            <button class="subscription__sqaure" type="submit">
+            </button>
+          </form>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer page__footer" id="contacts">
+      <div class="container">
+        <div class="grid">
+          <div
+            class="
+            grid__item
+            grid__item--mobile-1-2
+            grid__item--tablet-1-1
+            grid__item--desktop-1-1
+          ">
+            <div class="footer__links">
+              <a href="#" class="logo">
+                <img
+                  src="images/logo.svg"
+                  alt="NAMU"
+                  class="logo__img"
+                >
+              </a>
+
+              <div class="socials">
+                <div class="socials__item">
+                  <a href="#" class="social__item--link">
+                    <img src="images/fb-logo.svg" alt="fb logo">
+                  </a>
+                </div>
+
+                <div class="socials__item">
+                  <a href="#" class="social__item--link">
+                    <img src="images/ig-logo.svg" alt="ig logo">
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="grid__item grid__item--mobile-1-1 grid__item--tablet-2-3 grid__item--desktop-3-4">
+            <div class="schedule-and-contacts">
+              <div class="schedule">
+                <h3 class="schedule-and-contacts--title">Графік роботи:</h3>
+                <ul class="schedule__list">
+                  <li class="schedule__list--item">
+                    <span class="schedule__list--item-time">12:00 — 20:00</span>
+                    середа
+                  </li>
+                  <li class="schedule__list--item">
+                    <span class="schedule__list--item-time">12:00 — 20:00</span>
+                    четвер
+                  </li>
+                  <li class="schedule__list--item">
+                    <span class="schedule__list--item-time">12:00 — 20:00</span>
+                    п’ятниця
+                  </li>
+                  <li class="schedule__list--item">
+                    <span class="schedule__list--item-time">11:00 — 19:00</span>
+                    субота
+                  </li>
+                  <li class="schedule__list--item">
+                    <span class="schedule__list--item-time">11:00 — 19:00</span>
+                    неділя
+                  </li>
+                </ul>
+                <p class="schedule__add-information">
+                  Вихідні понеділок, вівторок <br>
+                  Каса припиняє роботу за 1 годину до закриття музею
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="grid__item grid__item--mobile-2-2 grid__item--tablet-4-5 grid__item--desktop-5-6">
+            <div class="contacts">
+              <h3 class="schedule-and-contacts--title">Контакти:</h3>
+              <ul class="contact__list">
+                <li class="contacts__list--item">
+                  вул. М. Грушевського, 6; Київ, 01001
+                </li>
+                <li class="contacts__list--item">тел. +38 (044) 278-13-57</li>
+                <li class="contacts__list--item">факс +38 (044) 278-74-54</li>
+                <li class="contacts__list--item">e-mail: info@namu.kiev.ua</li>
+                <a href="#page-top" class="footer__button-to-up">
+                  <img src="images/arrow-to-up.svg" alt="arrow to up">
+                </a>
+              </ul>
+            </div>
+          </div>
+
+          <div class="footer__line grid__item grid__item--mobile-1-2 grid__item--tablet-2-5 grid__item--desktop-7-7">
+          </div>
+
+          <div class="grid__item grid__item--mobile-1-1 grid__item--tablet-2-3 grid__item--desktop-8-9">
+            <nav class="nav">
+              <a href="#" class="nav--item"> Галерея </a>
+              <a href="#events" class="nav--item"> Виставки та події </a>
+            </nav>
+          </div>
+
+          <div class="grid__item grid__item--mobile-2-2 grid__item--tablet-4-5 grid__item--desktop-10-11">
+            <nav class="nav">
+              <a href="#" class="nav--item"> Про Нас </a>
+              <a href="#" class="nav--item"> Контакти </a>
+            </nav>
+          </div>
+        </div>
+
+        <div class="footer__authors">
+          <p class="footer__authors--item">Made by Valerii Viachalo</p>
+          <p class="footer__authors--item">Designed by Zhyriada Marina</p>
+          <p class="footer__authors--item">
+            Copyright © 2019. All Rights Reserved.
+          </p>
+        </div>
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
+
 </html>
