--- a/src/index.html
+++ b/src/index.html
@@ -137,14 +137,16 @@
                 class="events__image"
               >
               <div class="events__info">
-                <p class="events__type">ВИСТАВКА</p>
-                <span class="events__date">26.08-29.11.2019</span>
+                <div class="events__exhibition">
+                  <p class="events__type">ВИСТАВКА</p>
+                  <span class="events__date">26.08-29.11.2019</span>
+                </div>
+                <div class="events__subtitle">
+                  <div class="events__name">Йду і повертаюсь</div>
+                  <div class="events__square"></div>
+                </div>
+                <div class="events__description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</div>
               </div>
-              <div class="events__subtitle">
-                <div class="events__name">Йду і повертаюсь</div>
-                <div class="events__square"></div>
-              </div>
-              <div class="events__description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</div>
             </div>
 
             <div class="events__item">
@@ -154,14 +156,16 @@
                 class="events__image"
               >
               <div class="events__info">
-                <p class="events__type">ВИСТАВКА</p>
-                <span class="events__date">26.08-29.11.2019</span>
+                <div class="events__exhibition">
+                  <p class="events__type">ВИСТАВКА</p>
+                  <span class="events__date">26.08-29.11.2019</span>
+                </div>
+                <div class="events__subtitle">
+                  <div class="events__name">І спогади і мрії</div>
+                  <div class="events__square"></div>
+                </div>
+                <div class="events__description">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</div>
               </div>
-              <div class="events__subtitle">
-                <div class="events__name">І спогади і мрії</div>
-                <div class="events__square"></div>
-              </div>
-              <div class="events__description">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</div>
             </div>
 
           </div>
