added subscription section

--- a/src/index.html
+++ b/src/index.html
@@ -252,6 +252,33 @@
         </div>
       </section>
 
+      <section class="subscription" id="subscription">
+        <div class="container">
+          <div class="subscription__content">
+            <h2 class="subscription__title">Підписка</h2>
+            <h3 class="subscription__subtitle">Бути в курсі всіх актуальних подій та останніх новин.</h3>
+            <form
+              action="index.html"
+              method="get"
+              autocomplete="off"
+              class="subscription__form"
+            >
+              <input
+                required
+                type="email"
+                placeholder="E-mail"
+                class="subscription__input"
+              >
+              <button
+                type="submit"
+                class="subscription__button btn btn--orange"
+              >
+              </button>
+            </form>
+          </div>
+        </div>
+      </section>
+
     </main>
 
     <script type="text/javascript" src="scripts/main.js"></script>
