--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Museum</title>
+    <title>National Art Museum of Ukraine</title>
     <link rel="icon"
       type="image/x-icon"
       href="images/icons/logo.svg"
@@ -66,7 +66,6 @@
       <div class="container">
         <div class="menu__content">
           <div class="menu__nav nav">
-
             <div class="menu__close">
               <a href="#" class="menu__close-icon"></a>
             </div>
@@ -101,19 +100,24 @@
               <div class="schedule__day">
                 <strong>12:00 — 20:00</strong> середа
               </div>
+
               <div class="schedule__day">
                 <strong>12:00 — 20:00</strong> четвер
               </div>
+
               <div class="schedule__day">
                 <strong>12:00 — 20:00</strong> п'ятниця
               </div>
+
               <div class="schedule__day">
                 <strong>11:00 — 19:00</strong> субота
               </div>
+
               <div class="schedule__day">
                 <strong>11:00 — 19:00</strong> неділя
               </div>
             </div>
+
             <div class="schedule__days-off">
               <strong>Вихідні:</strong> понеділок, вівторок
               <br>
@@ -141,10 +145,12 @@
                   <p class="events__type">ВИСТАВКА</p>
                   <span class="events__date">26.08-29.11.2019</span>
                 </div>
+
                 <div class="events__subtitle">
                   <div class="events__name">Йду і повертаюсь</div>
                   <div class="events__square"></div>
                 </div>
+
                 <div class="events__description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</div>
               </div>
             </div>
@@ -160,14 +166,15 @@
                   <p class="events__type">ВИСТАВКА</p>
                   <span class="events__date">26.08-29.11.2019</span>
                 </div>
+
                 <div class="events__subtitle">
                   <div class="events__name">І спогади і мрії</div>
                   <div class="events__square"></div>
                 </div>
+
                 <div class="events__description">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</div>
               </div>
             </div>
-
           </div>
         </div>
       </section>
@@ -178,16 +185,18 @@
           alt="lecture"
           class="lecture__image"
         >
+
         <div class="lecture__content">
           <div class="lecture__info">
             <div class="lecture__type">ЛЕКЦІЯ</div>
             <div class="lecture__date">26/08/2019 - 11:00</div>
           </div>
+
           <h3 class="lecture__title">Від класицизму до романтизму</h3>
         </div>
       </section>
 
-      <section class="page__gallery gallery">
+      <section class="page__gallery gallery" id="gallery">
         <div class="container">
           <h2 class="gallery__title">
             Галерея
@@ -225,7 +234,6 @@
               class="gallery__image"
             >
             </div>
-
           </div>
 
           <div class="gallery__slider slider" id="slider">
@@ -248,7 +256,6 @@
               </div>
             </div>
           </div>
-
         </div>
       </section>
 
@@ -256,12 +263,15 @@
         <div class="container">
           <div class="subscription__content">
             <h2 class="subscription__title">Підписка</h2>
+
             <h3 class="subscription__subtitle">Бути в курсі всіх актуальних подій та останніх новин.</h3>
+
             <form
               action="index.html"
               method="get"
               autocomplete="off"
               class="subscription__form"
+              id="form"
             >
               <input
                 required
@@ -278,8 +288,136 @@
           </div>
         </div>
       </section>
-
     </main>
+
+    <footer class="footer" id="contacts">
+      <div class="container">
+        <div class="footer__content">
+          <div class="grid">
+            <div class="footer__socials grid__item--1-2 grid__item--tablet-1-1">
+              <h2 class="footer__logo">
+                <a href="#home" class="footer__logo-abbreviation">
+                  NA
+                  <br>
+                  MU
+                </a>
+              </h2>
+
+              <div class="footer__icons">
+                <a
+                  href="https://www.facebook.com/namu.museum/"
+                  class="footer__facebook"
+                  target="_blank"
+                >
+                  <img src="images/facebook.svg" alt="facebook link">
+                </a>
+
+                <a
+                  href="https://www.instagram.com/namu.museum/?hl=en"
+                  class="footer__instagram"
+                  target="_blank"
+                >
+                  <img src="images/instagram.svg" alt="instagram link">
+                </a>
+              </div>
+            </div>
+
+            <div class="grid__item--1-1 grid__item--tablet-2-3 grid__item--desktop-3-4">
+              <div class="footer__schedule schedule schedule--footer">
+                <div class="schedule__work-days">
+                  <div class="schedule__title">Графік роботи</div>
+                  <div class="schedule__day">
+                    <strong>12:00 — 20:00</strong> середа
+                  </div>
+                  <div class="schedule__day">
+                    <strong>12:00 — 20:00</strong> четвер
+                  </div>
+                  <div class="schedule__day">
+                    <strong>12:00 — 20:00</strong> п'ятниця
+                  </div>
+                  <div class="schedule__day">
+                    <strong>11:00 — 19:00</strong> субота
+                  </div>
+                  <div class="schedule__day">
+                    <strong>11:00 — 19:00</strong> неділя
+                  </div>
+                </div>
+                <div class="schedule__days-off schedule__days-off--footer">
+                  Вихідні: понеділок, вівторок
+                  <br>
+                  Каса припиняє роботу за 1 годину до закриття музею
+                </div>
+              </div>
+            </div>
+
+            <div class="grid__item--2-2 grid__item--tablet-4-5 grid__item--desktop-5-6">
+              <div class="footer__contacts">
+                <div class="footer__title">Контакти:</div>
+
+                <div class="footer__info">
+                  <a
+                    href="https://goo.gl/maps/AqWY4z8UznkxMfDp9"
+                    class="footer__address"
+                    target="_blank"
+                  >
+                    вул. М. Грушевського, 6; Київ, 01001
+                  </a>
+
+                  <a href="tel:+38(044)278-13-57" class="footer__tel">
+                    тел. +38 (044) 278-13-57
+                  </a>
+
+                  <a href="fax:+38(044)278-74-54" class="footer__fax">
+                    факс +38 (044) 278-74-54
+                  </a>
+
+                  <a href="mailto:info@namu.kiev.ua" class="footer__mail">
+                    e-mail: info@namu.kiev.ua
+                  </a>
+                </div>
+              </div>
+            </div>
+
+            <div class="footer__to-top grid__item--2-2">
+              <a href="#home" class="footer__btn">
+                <img src="images/arrow up.svg" alt="button to top">
+              </a>
+            </div>
+
+            <div class="footer__line grid__item--1-2 grid__item--tablet-2-5 grid__item--desktop-7-7"></div>
+
+            <div class="grid__item--1-1 grid__item--tablet-2-3 grid__item--desktop-8-9">
+              <ul class="nav__item nav__item--footer">
+                <li class="nav__list nav__list--footer">
+                  <a href="#gallery" class="nav__link nav__link--footer">Галерея</a>
+                </li>
+
+                <li class="nav__list nav__list--footer">
+                  <a href="#events" class="nav__link nav__link--footer">Виставки та події</a>
+                </li>
+              </ul>
+            </div>
+
+            <div class="footer__navigation grid__item--2-2 grid__item--tablet-4-5 grid__item--desktop-10-11">
+              <ul class="nav__item nav__item--footer">
+                <li class="nav__list nav__list--footer">
+                  <a href="#subscription" class="nav__link nav__link--footer">Про Нас</a>
+                </li>
+
+                <li class="nav__list nav__list--footer">
+                  <a href="#contacts" class="nav__link nav__link--footer">Контакти</a>
+                </li>
+              </ul>
+            </div>
+
+            <div class="footer__rights grid__item--1-2 grid__item--tablet-1-6 grid__item--desktop-1-12">
+              <div class="footer__designer">Designed by Zhyriada Marina</div>
+              <div class="footer__copyright">Copyright © 2019. All Rights Reserved.</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script type="text/javascript" src="scripts/main.js"></script>
     <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
