menu tablet problem

--- a/src/index.html
+++ b/src/index.html
@@ -22,13 +22,15 @@
     <header class="header" id="page-top">
       <div class="container">
         <div class="header__nav">
-          <a href="#menu" class="header__menu-opener">
-            <img
-              src="images/baseline-menu.svg"
-              alt="burger menu logo"
-              class="header__nav--btn"
-            >
-          </a>
+          <div class="header__menu-opener">
+            <a href="#menu" class="header__menu-opener--item">
+              <img
+                src="images/baseline-menu.svg"
+                alt="burger menu logo"
+                class="header__nav--btn"
+              >
+            </a>
+          </div>
 
           <a href="#" class="logo">
             <img
@@ -67,7 +69,12 @@
       </div>
     </header>
 
-    <div class="page--menu__navigation menu__navigation" id="menu">
+    <div
+      id="menu"
+      class="
+        page--menu__navigation
+        menu__navigation
+      ">
       <main class="container">
         <div class="grid">
           <a href="#" class="menu__navigation--cross-btn">
@@ -134,8 +141,8 @@
           <div class="
             grid__item
             grid__item--mobile-1-2
-            grid__item--tablet-2-5
-            grid__item--desktop-7-8
+            grid__item--tablet-2-6
+            grid__item--desktop-3-12
           ">
 
             <div class="
