--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
           </a>
           <a
             href="#"
-            class="header__top-nav__logo grid__item--desktop-6-8 grid__item--tablet-5-6"
+            class="header__top-nav__logo grid__item--desktop-6-7 grid__item--tablet-5-6"
             title="logo">
             <img
               src="./images/signs/NAMU.svg"
@@ -386,23 +386,29 @@
         </div>
 
         <div class="footer__list grid__item--tablet-3-5 grid__item--desktop-9-11">
-          <div class="footer__list__left">
-            <li class="footer__item">
-              <a href="#gallery" class="footer__link">Галерея</a>
-            </li>
-            <li class="footer__item">
-              <a href="#events" class="footer__link">Виставки та події</a>
-            </li>
-          </div>
-          <div class="footer__list__right">
-            <li class="footer__item">
-              <a href="#about-us" class="footer__link">Про Нас</a>
-            </li>
-            <li class="footer__item">
-              <a href="#contacts" class="footer__link">Контакти</a>
-            </li>
+          <div class="footer__list__container">
+            <div class="footer__list__left">
+              <li class="footer__item">
+                <a href="#gallery" class="footer__link">Галерея</a>
+              </li>
+              <li class="footer__item">
+                <a href="#events" class="footer__link">Виставки та події</a>
+              </li>
+            </div>
+            <div class="footer__list__right">
+              <li class="footer__item">
+                <a href="#about-us" class="footer__link">Про Нас</a>
+              </li>
+              <li class="footer__item">
+                <a href="#contacts" class="footer__link">Контакти</a>
+              </li>
+            </div>
           </div>
         </div>
+      </div>
+      <div class="footer__down">
+        <p class="footer__down__paragraph">Designed by Zhyriada Marina</p>
+        <p class="footer__down__paragraph footer__down__paragraph--last">Copyright © 2019. All Rights Reserved.</p>
       </div>
     </footer>
   </body>
