menu task solution and input form

--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,7 @@
             ">
               <nav class="nav">
                 <a
-                  href="#"
+                  href="#gallery"
                   class="
                     nav--item
                     menu__navigation--nav--item
@@ -138,13 +138,13 @@
             </div>
           </div>
 
+
           <div class="
             grid__item
             grid__item--mobile-1-2
             grid__item--tablet-2-6
             grid__item--desktop-3-12
           ">
-
             <div class="
               schedule-and-contacts
               menu__navigation--schedule-and-contacts
@@ -190,12 +190,12 @@
                       неділя
                   </li>
                 </ul>
-              </div>
+            </div>
               <div class="
                 schedule__add-information
                 grid__item
                 grid__item--mobile-1-2
-                grid__item--tablet-5-6 grid__item--desktop-10-11
+                grid__item--tablet-6-6 grid__item--desktop-10-11
               ">
                 <p class="schedule__add-information--text">
                     Вихідні понеділок, вівторок
@@ -391,8 +391,8 @@
         </p>
         <div class="subscription__positional">
           <form
-            action="#"
-            method="get"
+            action="/"
+            method="post"
             class="subscription__form"
           >
             <input
@@ -513,11 +513,25 @@
               <h3 class="schedule-and-contacts--title">Контакти:</h3>
               <ul class="contact__list">
                 <li class="contacts__list--item">
-                  вул. М. Грушевського, 6; Київ, 01001
+                  <a href="https://g.co/kgs/cGHm3e" class="contacts__list--item--link">
+                    вул. М. Грушевського, 6; Київ, 01001
+                  </a>
                 </li>
-                <li class="contacts__list--item">тел. +38 (044) 278-13-57</li>
-                <li class="contacts__list--item">факс +38 (044) 278-74-54</li>
-                <li class="contacts__list--item">e-mail: info@namu.kiev.ua</li>
+                <li class="contacts__list--item">
+                  <a href="tel:380442781357" class="contacts__list--item--link">
+                    тел. +38 (044) 278-13-57
+                  </a>
+                </li>
+                <li class="contacts__list--item">
+                  <a href="tel:380442787454" class="contacts__list--item--link">
+                    факс +38 (044) 278-74-54
+                  </a>
+                </li>
+                <li class="contacts__list--item">
+                  <a href="mailto:info@namu.kiev.ua" class="contacts__list--item--link">
+                    e-mail: info@namu.kiev.ua
+                  </a>
+                </li>
                 <a
                   href="#page-top"
                   class="footer__button-to-up
@@ -570,7 +584,7 @@
           ">
             <nav class="nav menu__nav--items">
               <a href="#" class="nav--item"> Про Нас </a>
-              <a href="#" class="nav--item"> Контакти </a>
+              <a href="#contacts" class="nav--item"> Контакти </a>
             </nav>
           </div>
         </div>
