--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,143 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ukr">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Національний художній музей України</title>
+    <link rel="icon" href="/images/favicon.jpg">
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    >
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="header page__header">
+      <div class="container">
+        <div>
+          <img
+            src="/images/header.png"
+            alt="Національний художній музей України, м.Київ"
+            class="header__image"
+          >
+        </div>
+        <div class="header__content">
+          <a href="#menu" class="icon icon--menu"></a>
+
+          <div class="header__nav grid">
+            <div class="
+              grid__item--mobile-1-2
+              grid__item--tablet-4-5
+              grid__item--desktop-6-7"
+            >
+              <div class="logo__container">
+                <a href="#" class="header__logo">
+                  NA <br> MU
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="grid">
+            <div class="
+              grid__item--mobile-1-2
+              grid__item--tablet-1-3
+              grid__item--desktop-1-5"
+            >
+              <h1 class="
+                header__title
+                grid_item
+                grid__item--desktop-1-5"
+              >
+                ХУДОЖНІЙ МУЗЕЙ
+              </h1>
+            </div>
+
+            <div class="
+              grid__item--mobile-1-2
+              grid__item--tablet-1-3
+              grid__item--desktop-3-5"
+            >
+              <div class="header__button button">
+                <a class="button__text" href="#tickets">
+                  КВИТКИ
+                </a>
+                <a
+                  class="button__press"
+                  href="#tickets"
+                  target="_blank"
+                ></a>
+              </div>
+            </div>
+
+            <div class="header__side">
+              <div class="header__line"></div>
+              <a class="header__events" href="#events">
+                ПОДІЇ
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+
+  </body>
+</html>
+
+
+<!--<nav class="page__menu menu" id="menu">
+      <div class="container">
+        <div class="menu__content">
+          <div class="menu__top menu__top-content">
+                       <a
+              href="#"
+              class="
+                icon
+                icon--cross
+                header"
+            ></a>
+
+          </div>
+
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a href="#gallery" class="menu__links">Галерея</a>
+            </li>
+            <li class="menu__item">
+              <a href="#Actions" class="menu__links">Виставки та події</a>
+            </li>
+            <li class="menu__item">
+              <a href="#About-us" class="menu__links">Про Нас</a>
+            </li>
+            <li class="menu__item">
+              <a href="#Contacts" class="menu__links">Контакти</a>
+            </li>
+
+          </ul>
+
+
+        </div>
+      </div>
+    </nav>//
+
+
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
+
