the finishing touches

--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,10 @@
     <title>NAMU</title>
     <link
       rel="shortcut icon"
-      href="images/logo-for-window.png"
+      href="photos/logo-for-window.png"
       type="image/x-icon"
     >
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -19,7 +20,17 @@
   </head>
 
   <body class="page__body">
-    <header class="header" id="page-top">
+    <div class="page-loader">
+      <div class="spinner"></div>
+    </div>
+    <header
+      class="header"
+      id="page-top"
+      data-aos="fade-zoom-in"
+      data-aos-easing="ease-in-out"
+      data-aos-delay="700"
+      data-aos-offset="0"
+      >
       <div class="container">
         <div class="header__nav">
           <div class="header__menu-opener">
@@ -190,7 +201,7 @@
                       неділя
                   </li>
                 </ul>
-            </div>
+              </div>
               <div class="
                 schedule__add-information
                 grid__item
@@ -212,17 +223,27 @@
     </div>
     </div>
 
-    <section class="section events" id="events">
+    <section
+      class="section events"
+      id="events"
+      data-aos="fade-zoom-in"
+      data-aos-easing="ease-in-out"
+      data-aos-delay="750"
+      data-aos-offset="0"
+    >
       <main class="container">
         <h2 class="section__title">
           Актуальні події
         </h2>
 
-        <div class="
-          events--item
-          grid
-          grid--tablet
-          grid--desktop
+        <div
+          data-aos="fade-up"
+          data-aos-duration="900"
+          class="
+            events--item
+            grid
+            grid--tablet
+            grid--desktop
         ">
           <div class="
               events--image
@@ -260,7 +281,10 @@
         </div>
         </div>
 
-        <div class="
+        <div
+        data-aos="fade-up"
+        data-aos-duration="900"
+        class="
           events--item
           grid
           grid--tablet
@@ -303,7 +327,11 @@
         </div>
       </main>
 
-      <div class="events__list--item">
+      <div
+        data-aos="fade-up"
+        data-aos-duration="900"
+        class="events__list--item"
+      >
         <div class="lection__description">
           <div class="lection__content">
             <div class="lection__type-and-date">
@@ -328,7 +356,12 @@
     </section>
     </main>
 
-    <section class="section gallery" id="gallery">
+    <section
+      class="section gallery"
+      id="gallery"
+      data-aos="fade-up"
+      data-aos-duration="900"
+    >
       <div class="container">
         <h2 class="section__title">
           Галерея
@@ -338,7 +371,7 @@
             <div class="gallery__slider--item">
               <img
                 class="gallery__slider--item-image"
-                src="images/gallery-1.png"
+                src="photos/gallery-1.png"
                 alt="slide-1"
               >
             </div>
@@ -346,7 +379,7 @@
             <div class="gallery__slider--item">
               <img
                 class="gallery__slider--item-image"
-                src="images/gallery-2.png"
+                src="photos/gallery-2.png"
                 alt="slide-2"
               >
             </div>
@@ -354,7 +387,7 @@
             <div class="gallery__slider--item">
               <img
                 class="gallery__slider--item-image"
-                src="images/gallery-3.png"
+                src="photos/gallery-3.png"
                 alt="slide-3"
               >
             </div>
@@ -362,7 +395,7 @@
             <div class="gallery__slider--item">
               <img
                 class="gallery__slider--item-image"
-                src="images/gallery-4.png"
+                src="photos/gallery-4.png"
                 alt="slide-4"
               >
             </div>
@@ -605,6 +638,10 @@
       </div>
     </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 
 </html>
