link updated, scrollbar removed, slider behaviour corrected

--- a/src/index.html
+++ b/src/index.html
@@ -335,7 +335,7 @@
                 </li>
 
                 <li class="contact__item">
-                  <a class="contact__link" href="fax:+380442787454">факс +38 (044) 278-74-54</a>
+                  <a class="contact__link" href="tel:+380442787454">факс +38 (044) 278-74-54</a>
                 </li>
 
                 <li class="contact__item">
