--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,69 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
-    <link rel="stylesheet" href="./styles/main.scss">
+    <title>NAMU landing</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&family=Montserrat:wght@300;400;500;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Inter:wght@400;700;800&family=Montserrat:wght@300;400;500;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+
+
+    <link rel="stylesheet" href="./main.css">
+    <link rel="icon" type="image/x-icon" href="./images/NA MU.svg">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page">
     <script type="text/javascript" src="scripts/main.js"></script>
+
+    <div class="header">
+      <div class="header__background-container">
+        <div class="header__background-image"></div>
+
+        <div class="header__background-white-area"></div>
+      </div>
+
+      <div class="arc">
+        <div class="header__top">
+          <a href="#menu" class="icon icon--menu-opener"></a>
+
+          <div class="
+            grid__item--tablet-4-5
+            grid__item--desktop-6-7"
+          >
+            <a href="https://namu.ua/" class="logo logo--header">
+              na<br>mu
+            </a>
+          </div>
+        </div>
+
+        <div class="header__content">
+          <div class="grid grid--screen">
+            <div class="grid__item--desktop-1-5"
+            >
+              <div class="header__title">
+                художній<br>музей
+              </div>
+            </div>
+          </div>
+
+          <div class="grid grid--screen">
+            <div class="grid__item--desktop-3-5"
+            >
+              <div class="header__tickets">
+                <div class="header__tickets-title">
+                  квитки
+                </div>
+
+                <a href="#" class="header__tickets-arrow-container">
+                  <div class="header__tickets-arrow"></div>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="header__line"></div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
