--- a/src/index.html
+++ b/src/index.html
@@ -355,10 +355,29 @@
                   Контакти:
                 </p>
                 <ul class="schedule__list">
-                  <li class="schedule__contact">вул. М. Грушевського, 6; Київ, 01001</li>
-                  <li class="schedule__contact">тел. +38 (044) 278-13-57</li>
-                  <li class="schedule__contact">факс +38 (044) 278-74-54</li>
-                  <li class="schedule__contact">e-mail: info@namu.kiev.ua</li>
+                  <li class="schedule__contact">
+                    <a
+                      href="https://goo.gl/maps/V6wp3w73J7pXgS2a6" class="schedule__contact-link"
+                      target="_blank"
+                    >
+                      вул. М. Грушевського, 6; Київ, 01001
+                    </a>
+                  </li>
+                  <li class="schedule__contact">
+                    <a href="tel:380442781357" class="schedule__contact-link">
+                    тел. +38 (044) 278-13-57
+                    </a>
+                  </li>
+                  <li class="schedule__contact">
+                    <a href="tel:380442787454" class="schedule__contact-link">
+                    факс +38 (044) 278-74-54
+                    </a>
+                  </li>
+                  <li class="schedule__contact">
+                    <a href="mailto:info@namu.kiev.ua" class="schedule__contact-link">
+                    e-mail: info@namu.kiev.ua
+                    </a>
+                  </li>
                 </ul>
               </div>
               <a href="#top" class="page__top"></a>
