--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
       href="https://fonts.gstatic.com"
     >
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <script src="scripts/main.js" defer></script>
   </head>
   <body class="page__body">
     <header class="header page__header">
@@ -83,61 +84,64 @@
       </div>
     </header>
 
-  </body>
-</html>
-
-
-<!--<nav class="page__menu menu" id="menu">
+    <div id="menu" class="menu page__menu">
       <div class="container">
         <div class="menu__content">
-          <div class="menu__top menu__top-content">
-                       <a
-              href="#"
-              class="
-                icon
-                icon--cross
-                header"
-            ></a>
+          <a href="#" class="icon icon--cross"></a>
+          <nav class="nav">
+            <ul class="nav__list">
 
+              <div class="nav__wrapper">
+                <li class="nav__item">
+                  <a class="nav__link" href="#gallery">Галерея</a>
+                </li>
+
+                <li class="nav__item">
+                  <a class="nav__link" href="#events">Виставки та події</a>
+                </li>
+              </div>
+
+              <div class="nav__wrapper">
+                <li class="nav__item">
+                  <a class="nav__link" href="#about-us">Про Нас</a>
+                </li>
+
+                <li class="nav__item">
+                  <a class="nav__link" href="#contacts">Контакти</a>
+                </li>
+              </div>
+            </ul>
+          </nav>
+
+          <div class="work-schedule">
+            <h2 class="work-schedule__title">
+              Графік роботи
+            </h2>
+
+            <div class="work-schedule__schedule-container">
+              <div class="work-schedule__schedule">
+                <strong>12:00 — 20:00 </strong> середа
+                <br>
+                <strong>12:00 — 20:00 </strong>  четвер
+                <br>
+                <strong>12:00 — 20:00 </strong>  п’ятниця
+                <br>
+                <strong>11:00 — 19:00</strong> субота
+                <br>
+                <strong>11:00 — 19:00</strong> неділя
+              </div>
+
+              <div class="work-schedule__day-off">
+                <strong>Вихідні: </strong> понеділок, вівторок
+                <br>
+              Каса припиняє роботу за 1 годину
+              до закриття музею
+              </div>
+            </div>
           </div>
-
-          <ul class="menu__list">
-            <li class="menu__item">
-              <a href="#gallery" class="menu__links">Галерея</a>
-            </li>
-            <li class="menu__item">
-              <a href="#Actions" class="menu__links">Виставки та події</a>
-            </li>
-            <li class="menu__item">
-              <a href="#About-us" class="menu__links">Про Нас</a>
-            </li>
-            <li class="menu__item">
-              <a href="#Contacts" class="menu__links">Контакти</a>
-            </li>
-
-          </ul>
-
-
         </div>
       </div>
-    </nav>//
-
-
-  </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <script type="text/javascript" src="scripts/main.js"></script>
+    </div>
   </body>
 </html>
 
